fixed overflow mobile version

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,9 +2,11 @@
     margin: 0;
 }
 
-html body {
-  scroll-behavior: smooth;
+html, body {
+  margin: 0;
+  padding: 0;
   overflow-x: hidden;
+  width: 100%;
 }
 
 app-navbar {
